# boketto

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
include/: common.h  core.h  gui.h  mainwindow.h  window.h
include/core/: cpu.h  mem.h  ppu.h
include/core/arm/: generator.h  instructions.h
include/core/arm/instruction/: control_flow.h  data_processing.h  load_store.h  single_data_transfer.h
include/core/cpu/: helpers.h  register.h
include/core/io/: lcd.h
include/core/ppu/: lcd_io.h
include/core/scheduler/: scheduler.h
include/core/thumb/: generator.h  instructions.h
include/core/thumb/instruction/: alu_ops.h  data_processing.h  load_store.h  misc.h
include/util/: bit.h  file.h  log.h
src/: core.c  core.cpp  core.h  disasm.c  disasm.h  gui.c  gui.h  main.c  main.cpp  mainwindow.cpp  window.c
src/backend/: CMakeLists.txt  core.c
src/backend/core/: cpu.c  cpu.h  mem.c  mem.h  ppu.c
src/backend/core/arm/: CMakeLists.txt  generator.c  generator.h  instructions.c  instructions.h
src/backend/core/arm/instruction/: control_flow.c  data_processing.c  data_processing.h  load_store.c  load_store.h  status_register.c  status_register.h
src/backend/core/cpu/: CMakeLists.txt  helpers.c  helpers.h  register.c  register.h
src/backend/core/io/: CMakeLists.txt  dma.c  dma.h  lcd.c
src/backend/core/scheduler/: CMakeLists.txt  scheduler.c  scheduler.h
src/backend/core/thumb/: CMakeLists.txt  generator.c  generator.h  instructions.c
src/backend/core/thumb/instruction/: alu_ops.c  alu_ops.h  control_flow.c  control_flow.h  load_store.c  load_store.h  misc.c
src/core/: CMakeLists.txt  cpu.c  cpu.cpp  cpu.h  mem.c  mem.cpp  ppu.c
src/core/arm/: CMakeLists.txt  control_flow.cpp  data_processing.cpp  generator.c  generator.h  instructions.c  misc.cpp
src/core/arm/instruction/: CMakeLists.txt  control_flow.c  control_flow.h  data_processing.c  data_processing.h  load_store.c  single_data_transfer.c  status_register.c  status_register.h
src/core/cpu/: helpers.c  helpers.h  register.c
src/core/io/: dma.c  lcd.c
src/core/scheduler/: scheduler.c
src/core/thumb/: CMakeLists.txt  generator.c  instructions.c  instructions.h
src/core/thumb/instruction/: CMakeLists.txt  alu_ops.c  alu_ops.h  control_flow.c  data_processing.c  load_store.c  misc.c
src/frontend/: CMakeLists.txt  gui.c  gui.h
src/util/: bit.c  bit.h  file.c  log.h
